ui.frontend/src/main/webpack/etisalat/styles/features_section.scss
/* ... */
.text--overlap__image {
    padding: 1rem;
}

.gray--color {
    color: $gray;
}

//banner-full-bleed class name
//Feature Banner Full Bleed aem authoring name
.banner-full-bleed {
    @include respond-to-min($desktop) {
        height: 545px;
    }

    .cmp-text {
        width: 588px;
        padding-top: 64px;
        @include respond-to-max($phone) {
            margin-bottom: 50px;
        }

        pre {
            font-size: $font12;
            font-weight: 700;
            @include font-family-lato;
            letter-spacing: 4px;
            line-height: 16px;
            margin-bottom: 8px;
        }

        h4 {
            font-size: $font32;
            font-weight: 400;
            line-height: 40px;
            margin: 0 0 2.5rem 0;

            @include respond-to-max($tablet) {
                font-size: $font28;
                line-height: 34px;
                margin: 0 0 3rem 0;
            }
            @include respond-to-max($phone) {
                margin: 0 0 1.25rem 0;
            }
        }

        .body-copy1 {
            font-size: $font32;
            line-height: 40px;
            @include font-family-Neotech;
            padding-right: 4px;

            @include respond-to-max($tablet) {
                font-size: $font28;
                line-height: 36px;
                margin-bottom: 8px;
            }
        }

        .body-copy2 {
            font-size: $font20;
            line-height: 28px;
            margin-bottom: 1rem;

            @include respond-to-max($tablet) {
                font-size: $font16;
                line-height: 24px;
                margin-bottom: 0.75rem;
            }
        }

        ul {
            @include respond-to-min($desktop) {
                display: flex;
                flex-wrap: wrap;
            }

            li {
                @include respond-to-min($desktop) {
                    flex: 1 0 50%;
                }
                font-size: $font20;
                margin-bottom: 10px;
                padding: 0;
                @include respond-to-max($tablet) {
                    font-size: $font16;
                    margin-bottom: 8px;
                }
            }
        }

        sub {
            font-size: $font12;
        }

        .cmp-button--primary {
            width: 288px;
            position: relative;
            bottom: 20px;
            left: 75px;

            @include respond-to-max($tablet) {
                margin: 24px 0 0;
                left: 0;
            }

            @include respond-to-max($phone) {
                margin: 24px 0 0;
                left: -205px;
                top: 50px;
            }
        }
    }

    .text {
        margin: 0 auto !important;
        width: 1224px !important;
        float: none !important;
        padding: 0 12px !important;
        @include respond-to-max($phone) {
            padding: 0 16px;
        }
    }

    .cmp-container {
        height: 100%;
        min-height: 579px;
        background-size: 100% auto;
        background-position: top center;
    }
}

.direction-column {
    height: 450px;
    margin-bottom: 13rem;

    .cmp-container {
        > .aem-Grid {
            flex-direction: column;
        }

        .aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--5 {
            width: 70%;
            margin-top: -3rem;

            @include respond-to-min($desktop) {
                width: 58.33333333%;
                margin-top: 0;
            }

            img {
                width: 70%;
                margin-left: 0;

                @include respond-to-max($tablet) {
                    width: 100%;
                }
            }
        }

        .aem-Grid.aem-Grid--phone--12 > .aem-GridColumn.aem-GridColumn--phone--7 {
            width: 100%;
        }

        .cmp-text {
            padding: 2rem;
            width: 100%;
        }
    }
}

//beigebg--pattern-bg teaser variation
.beigebg--pattern-bg {
    .cmp-image__image {
        position: relative;
        z-index: 4;
    }
    .cmp-container {
        margin: 0 auto;
        width: 1224px;
    }
}

