Bufgix/etsl-537 fixed tablet and mobile alignment problem and fixed button css

--- a/ui.frontend/src/main/webpack/etisalat/styles/features_section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/features_section.scss
@@ -363,8 +363,14 @@
     .cmp-text {
         width: 588px;
         padding-top: 64px;
+        @include respond-to-max($tablet) {
+            padding-top: 52px;
+            margin-left: 36px;
+        }
         @include respond-to-max($phone) {
             margin-bottom: 50px;
+            padding-top: 32px;
+            margin-left: 0;
         }
 
         pre {
@@ -441,7 +447,13 @@
             font-size: $font12;
         }
 
-        .cmp-button--primary {
+        sup {
+            @include respond-to-max($tablet) {
+                top: -2.5rem;
+            }
+        }
+
+        .cmp-button--primary,.cmp-button--promo,.cmp-button--secondary {
             width: 288px;
             position: relative;
             bottom: 20px;
@@ -449,13 +461,14 @@
 
             @include respond-to-max($tablet) {
                 margin: 24px 0 0;
-                left: 0;
+                left: -13rem;
+                top: 1rem;
             }
 
             @include respond-to-max($phone) {
                 margin: 24px 0 0;
                 left: -205px;
-                top: 50px;
+                top: 16px;
             }
         }
     }
@@ -472,10 +485,28 @@
 
     .cmp-container {
         height: 100%;
-        min-height: 579px;
+        min-height: 536px;
         background-size: 100% auto;
         background-position: top center;
+        @include respond-to-max($tablet) {
+            min-height: 685px;
+        }
+        @include respond-to-max($phone) {
+            min-height: 620px;
+        }
     }
+}
+
+.banner-full-bleed__right {
+   .cmp-text {
+    float: right;
+    @include respond-to-max($tablet) {
+        margin-right: 16rem;
+    }
+    @include respond-to-max($phone) {
+       float: left;
+    }
+   }
 }
 
 .direction-column {
